recropped some images and fixed spacing with return to top button

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -117,6 +117,7 @@ a {
   box-shadow: 0px 0px 3px #ddd;
   margin-left: 200px;
   margin-bottom: 150px;
+  margin-top: 75px;
 }
 
 .button_link {
